// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyRecords test renders active filters 1`] = `
<WithStyles(StandardPage)
  title="My research"
>
  <div
    className="columns"
  >
    <div
      className="column"
    >
      <StandardCard
        className=""
        text={
          <div>
            We were unable to find any results. You may be able to 
            <a
              href="/records/possible"
            >
              claim publications we think may be yours
            </a>
             or 
            <a
              href="/records/add/find"
            >
              add a missing publication
            </a>
          </div>
        }
        title="No publications found"
      >
        <div>
          We were unable to find any results. You may be able to 
          <a
            href="/records/possible"
          >
            claim publications we think may be yours
          </a>
           or 
          <a
            href="/records/add/find"
          >
            add a missing publication
          </a>
        </div>
      </StandardCard>
    </div>
    <div
      className="column is-3 is-hidden-mobile"
    >
      <StandardRighthandCard
        title="Refine results"
      >
        <FacetsFilter
          activeFacets={
            Object {
              "filters": Object {},
              "ranges": Object {
                "Year": Object {
                  "from": 2000,
                  "to": 2010,
                },
              },
            }
          }
          disabled={false}
          excludeFacetsList={
            Array [
              "Scopus document type",
              "Genre",
              "Year published",
            ]
          }
          facetsData={Object {}}
          isMyDataSetPage={false}
          lookupFacetsList={
            Object {
              "Author": "Author (lookup)",
              "Collection": "Collection (lookup)",
              "Subject": "Subject (lookup)",
            }
          }
          onFacetsChanged={[Function]}
          renameFacetsList={
            Object {
              "Display type": "Publication type",
              "Subtype": "Publication subtype",
            }
          }
          showOpenAccessFilter={true}
        />
      </StandardRighthandCard>
    </div>
  </div>
</WithStyles(StandardPage)>
`;

exports[`MyRecords test renders list of publications no facets 1`] = `
<WithStyles(StandardPage)
  title="My research"
>
  <div
    className="columns"
  >
    <div
      className="column"
    >
      <StandardCard
        className=""
      >
        <span>
          Displaying records 1 to 20 of 147 total records. 
        </span>
        <WithStyles(Grid)
          container={true}
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <span>
              Add to this list by 
              <a
                href="/records/possible"
              >
                claiming a publication
              </a>
               or 
              <a
                href="/records/add/find"
              >
                adding a missing publication
              </a>
              .
            </span>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListSorting)
              canUseExport={true}
              disabled={false}
              initPageLength={20}
              onExportPublications={[Function]}
              onPageSizeChanged={[Function]}
              onSortByChanged={[Function]}
              pageSize={20}
              pagingData={
                Object {
                  "current_page": 1,
                  "from": 1,
                  "per_page": 20,
                  "to": 20,
                  "total": 147,
                }
              }
              sortBy="published_date"
              sortDirection="Desc"
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListPaging)
              disabled={false}
              loading={false}
              onPageChanged={[Function]}
              pagingData={
                Object {
                  "current_page": 1,
                  "from": 1,
                  "per_page": 20,
                  "to": 20,
                  "total": 147,
                }
              }
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <PublicationsList
              hideCountDiff={false}
              publicationsList={
                Array [
                  1,
                  2,
                  3,
                ]
              }
              publicationsListSubset={Array []}
              showDefaultActions={true}
              showMetrics={false}
              showSourceCountIcon={false}
              showSources={false}
              subsetCustomActions={Array []}
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListPaging)
              disabled={false}
              loading={false}
              onPageChanged={[Function]}
              pagingData={
                Object {
                  "current_page": 1,
                  "from": 1,
                  "per_page": 20,
                  "to": 20,
                  "total": 147,
                }
              }
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </StandardCard>
    </div>
  </div>
</WithStyles(StandardPage)>
`;

exports[`MyRecords test renders list of publications with facets 1`] = `
<WithStyles(StandardPage)
  title="My research"
>
  <div
    className="columns"
  >
    <div
      className="column"
    >
      <StandardCard
        className=""
      >
        <span>
          Displaying records 1 to 20 of 147 total records. 
        </span>
        <WithStyles(Grid)
          container={true}
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <span>
              Add to this list by 
              <a
                href="/records/possible"
              >
                claiming a publication
              </a>
               or 
              <a
                href="/records/add/find"
              >
                adding a missing publication
              </a>
              .
            </span>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListSorting)
              canUseExport={true}
              disabled={false}
              initPageLength={20}
              onExportPublications={[Function]}
              onPageSizeChanged={[Function]}
              onSortByChanged={[Function]}
              pageSize={20}
              pagingData={
                Object {
                  "current_page": 1,
                  "from": 1,
                  "per_page": 20,
                  "to": 20,
                  "total": 147,
                }
              }
              sortBy="published_date"
              sortDirection="Desc"
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListPaging)
              disabled={false}
              loading={false}
              onPageChanged={[Function]}
              pagingData={
                Object {
                  "current_page": 1,
                  "from": 1,
                  "per_page": 20,
                  "to": 20,
                  "total": 147,
                }
              }
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <PublicationsList
              hideCountDiff={false}
              publicationsList={
                Array [
                  1,
                  2,
                  3,
                ]
              }
              publicationsListSubset={Array []}
              showDefaultActions={true}
              showMetrics={false}
              showSourceCountIcon={false}
              showSources={false}
              subsetCustomActions={Array []}
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListPaging)
              disabled={false}
              loading={false}
              onPageChanged={[Function]}
              pagingData={
                Object {
                  "current_page": 1,
                  "from": 1,
                  "per_page": 20,
                  "to": 20,
                  "total": 147,
                }
              }
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </StandardCard>
    </div>
    <div
      className="column is-3 is-hidden-mobile"
    >
      <StandardRighthandCard
        title="Refine results"
      >
        <FacetsFilter
          activeFacets={
            Object {
              "filters": Object {},
              "ranges": Object {},
            }
          }
          disabled={false}
          excludeFacetsList={
            Array [
              "Scopus document type",
              "Genre",
              "Year published",
            ]
          }
          facetsData={
            Object {
              "Display type": Object {
                "buckets": Array [
                  Object {
                    "doc_count": 95,
                    "key": 179,
                  },
                  Object {
                    "doc_count": 34,
                    "key": 130,
                  },
                  Object {
                    "doc_count": 2,
                    "key": 177,
                  },
                  Object {
                    "doc_count": 2,
                    "key": 183,
                  },
                  Object {
                    "doc_count": 1,
                    "key": 174,
                  },
                ],
                "doc_count_error_upper_bound": 0,
                "sum_other_doc_count": 3,
              },
              "Keywords": Object {
                "buckets": Array [
                  Object {
                    "doc_count": 15,
                    "key": "Brca1",
                  },
                  Object {
                    "doc_count": 15,
                    "key": "Oncology",
                  },
                  Object {
                    "doc_count": 13,
                    "key": "Breast cancer",
                  },
                  Object {
                    "doc_count": 12,
                    "key": "Genetics & Heredity",
                  },
                  Object {
                    "doc_count": 10,
                    "key": "Biochemistry & Molecular Biology",
                  },
                ],
                "doc_count_error_upper_bound": 0,
                "sum_other_doc_count": 641,
              },
            }
          }
          isMyDataSetPage={false}
          lookupFacetsList={
            Object {
              "Author": "Author (lookup)",
              "Collection": "Collection (lookup)",
              "Subject": "Subject (lookup)",
            }
          }
          onFacetsChanged={[Function]}
          renameFacetsList={
            Object {
              "Display type": "Publication type",
              "Subtype": "Publication subtype",
            }
          }
          showOpenAccessFilter={true}
        />
      </StandardRighthandCard>
    </div>
  </div>
</WithStyles(StandardPage)>
`;

exports[`MyRecords test renders loading screen while export publications loading 1`] = `
<WithStyles(StandardPage)
  title="My research"
>
  <div
    className="columns"
  >
    <div
      className="column"
    >
      <StandardCard
        className=""
      >
        <WithStyles(Grid)
          container={true}
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <span>
              Add to this list by 
              <a
                href="/records/possible"
              >
                claiming a publication
              </a>
               or 
              <a
                href="/records/add/find"
              >
                adding a missing publication
              </a>
              .
            </span>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListSorting)
              canUseExport={true}
              disabled={true}
              initPageLength={20}
              onExportPublications={[Function]}
              onPageSizeChanged={[Function]}
              onSortByChanged={[Function]}
              pageSize={20}
              pagingData={Object {}}
              sortBy="published_date"
              sortDirection="Desc"
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListPaging)
              disabled={true}
              loading={true}
              onPageChanged={[Function]}
              pagingData={Object {}}
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <div
              className="is-centered"
            >
              <WithStyles(InlineLoader)
                message="Exporting your publications..."
              />
            </div>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListPaging)
              disabled={true}
              loading={true}
              onPageChanged={[Function]}
              pagingData={Object {}}
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </StandardCard>
    </div>
  </div>
</WithStyles(StandardPage)>
`;

exports[`MyRecords test renders loading screen while loading account data 1`] = `""`;

exports[`MyRecords test renders loading screen while loading publications  1`] = `
<WithStyles(StandardPage)
  title="My research"
>
  <div
    className="is-centered"
  >
    <WithStyles(InlineLoader)
      message="Searching for your publications..."
    />
  </div>
  <div
    className="columns"
  />
</WithStyles(StandardPage)>
`;

exports[`MyRecords test renders loading screen while loading publications while filtering 1`] = `
<WithStyles(StandardPage)
  title="My research"
>
  <div
    className="columns"
  >
    <div
      className="column"
    >
      <StandardCard
        className=""
      >
        <WithStyles(Grid)
          container={true}
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <span>
              Add to this list by 
              <a
                href="/records/possible"
              >
                claiming a publication
              </a>
               or 
              <a
                href="/records/add/find"
              >
                adding a missing publication
              </a>
              .
            </span>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListSorting)
              canUseExport={true}
              disabled={true}
              initPageLength={20}
              onExportPublications={[Function]}
              onPageSizeChanged={[Function]}
              onSortByChanged={[Function]}
              pageSize={20}
              pagingData={Object {}}
              sortBy="published_date"
              sortDirection="Desc"
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListPaging)
              disabled={true}
              loading={true}
              onPageChanged={[Function]}
              pagingData={Object {}}
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <div
              className="is-centered"
            >
              <WithStyles(InlineLoader)
                message="Retrieving your publications..."
              />
            </div>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListPaging)
              disabled={true}
              loading={true}
              onPageChanged={[Function]}
              pagingData={Object {}}
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </StandardCard>
    </div>
  </div>
</WithStyles(StandardPage)>
`;

exports[`MyRecords test renders no results 1`] = `
<WithStyles(StandardPage)
  title="My research"
>
  <div
    className="columns"
  >
    <div
      className="column"
    >
      <StandardCard
        className=""
        text={
          <div>
            We were unable to find any results. You may be able to 
            <a
              href="/records/possible"
            >
              claim publications we think may be yours
            </a>
             or 
            <a
              href="/records/add/find"
            >
              add a missing publication
            </a>
          </div>
        }
        title="No publications found"
      >
        <div>
          We were unable to find any results. You may be able to 
          <a
            href="/records/possible"
          >
            claim publications we think may be yours
          </a>
           or 
          <a
            href="/records/add/find"
          >
            add a missing publication
          </a>
        </div>
      </StandardCard>
    </div>
  </div>
</WithStyles(StandardPage)>
`;
